# libb-nlp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-ops.sh  install.py  install.sh  push.sh  pyproject.toml  stack-gpu.sh  stack.sh
aws/: cf-libb-nlp-gpu.yml  stack.sh
cf/: cf-libb-nlp.yml  stack-gpu.sh
src/lnlp/: __init__.py  app.py  config.py  downloaders.py  main.py  managers.py  splitters.py
src/lnlp/api/: app.py  deps.py
src/lnlp/api/endpoints/: chat.py  extract.py  split.py
src/lnlp/core/: settings.py
src/lnlp/loaders/: pdf.py
src/lnlp/schemas/: chat.py  extract.py  split.py
src/lnlp/services/: downloaders.py  models.py  pdf.py  provider.py  splitters.py
src/lnlp/utils/: dashboard.py  health.py  metrics.py  templates.py
test/: conftest.py  test_chat.py  test_pdf.py  test_splitters.py
test/data/: transcript.txt
tests/: conftest.py
tests/api/: test_api_health.py  test_chat.py  test_extract.py
tests/data/: paragraph-long.txt  paragraph-short.txt
tests/data/transcripts/: SPOT.html
tests/fixtures/: docker.py
tests/local/: test_config.py  test_dashboard.py  test_metrics.py  test_pdf.py  test_pdf_edge_cases.py  test_templates.py  test_ticker.py
