[project]
name = "lnlp"
version = "0.1.0"
description = "A comprehensive Python API for Natural Language Processing tasks"
authors = [
  { name = "bissli", email = "bissli.xyz@protonmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.system-requirements]
cuda = "12.2"

[tool.pixi.dependencies]
pytorch-gpu = "*"
torchvision = "*"
sentence-transformers = ">=3.4.1,<4"
spacy = ">=3.8.2,<4"
langchain = ">=0.3.17,<1"
pysbd = ">=0.3.4,<1"
fastapi = ">=0.115.8,<1"
uvicorn = ">=0.34.0,<1"
pydantic = ">=2.10.6,<3"
httpx = ">=0.28.1,<1"
python-multipart = ">=0.0.20,<1"
anthropic = ">=0.46.0,<1"
openai = ">=1.63.2,<2"
seaborn = ">=0.13.2,<1"
pendulum = ">=3.0.0,<4"
psutil = ">=6.1.1,<7"

[tool.pixi.tasks]
start = "uvicorn lnlp.api.app:app --host 0.0.0.0 --port 8000 --reload --log-level info"
download-models = "python -c 'from lnlp.services.downloaders import download_spacy_model, download_sentence_transformer; download_spacy_model(\"en_core_web_sm\"); download_sentence_transformer(\"all-mpnet-base-v2\")'"

[tool.pixi.pypi-dependencies]
lnlp = { path = ".", editable = true }
pip = "*"
pdfplumber = "*"
hf_xet = "*"

[tool.pixi.feature.prod.pypi-dependencies]
lnlp = { path = "." }

[tool.pixi.feature.test.pypi-dependencies]
pytest = "*"
docker = "*"
bump2version = "*"

[tool.pixi.feature.test.tasks]
test = "pytest --md=report.md"

[tool.pixi.environments]
default = { features = ["test"], solve-group = "prod" }
prod = { features = ["prod"], solve-group = "prod" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
