[tool.poetry]
name = "lnlp"
version = "0.1.0"
description = "A comprehensive Python API for Natural Language Processing tasks"
authors = ["bissli <bissli.xyz@protonmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.14.0"
torch = { version = ">=2.0.0,<3.0.0", source = "pytorch-cu118" }
torchvision = { version = "*", source = "pytorch-cu118" }
sentence-transformers = ">=3.4.1,<4"
spacy = ">=3.8.2,<4"
langchain = ">=0.3.17,<1"
pysbd = ">=0.3.4,<1"
fastapi = ">=0.115.8,<1"
uvicorn = ">=0.34.0,<1"
pydantic = ">=2.10.6,<3"
python-multipart = ">=0.0.20,<1"
openai = ">=1.63.2,<2"
seaborn = ">=0.13.2,<1"
pendulum = ">=3.0.0,<4"
psutil = ">=6.1.1,<7"
pdfplumber = "*"
hf_xet = "*"
numpy = "*"
pyyaml = ">=6.0.0,<7"
regex = "*"

[tool.poetry.group.dev.dependencies]
bump2version = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
docker = "*"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
